--- a/src/app/user/management/_components/userCard/user-card.module.scss
+++ b/src/app/user/management/_components/userCard/user-card.module.scss
@@ -1,5 +1,3 @@
-
-
 .user {
   &__wrap {
     border: 1px solid #ddd;
@@ -7,14 +5,16 @@
     cursor: pointer;
     transition: all 0.2s;
     height: max-content;
-    &:hover{
+    border-radius: 10px;
+
+    &:hover {
       background-color: #f1eeee;
     }
   }
 
   &__avatar {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
   }
 
@@ -25,33 +25,77 @@
     justify-content: start;
 
     &-main {
-      color: blue;
+      color: #057ac1;
     }
 
     &-detail {
-      color: gray;
+      color: rgb(165, 165, 165);
+      font-size: 13px;
     }
   }
 
-  &__main-info {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
 
-  &__extra-info{
+
+  &__extra-info {
     display: flex;
     flex-direction: column;
     align-items: start;
-    &--small{
+
+    &--small {
       color: #666;
       font-size: 12px;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      font-size: 13px;
     }
   }
 
-  &__email{
-    color: blue;
+  &__email {
+    color: #057ac1;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-size: 13px;
   }
 
- 
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    @media (max-width: 768px) {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
+  }
+
+  &__actions {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    gap: 5px;
+    text-align: end;
+     @media (max-width: 768px) {
+      flex-direction: row;
+      align-items: center;
+      margin-inline-start: auto;
+    }
+  }
+
+
+  &__profile {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  &__contact {
+    text-align: start;
+     @media (max-width: 768px) {
+     margin-top: 5px;
+    }
+  }
 }
