fix: handle click on favorite and user card

--- a/src/app/user/management/_components/userCard/user-card.module.scss
+++ b/src/app/user/management/_components/userCard/user-card.module.scss
@@ -1,16 +1,4 @@
 .user {
-  &__wrap {
-    border: 1px solid #ddd;
-    padding: 10px;
-    cursor: pointer;
-    transition: all 0.2s;
-    height: max-content;
-    border-radius: 10px;
-
-    &:hover {
-      background-color: #f1eeee;
-    }
-  }
 
   &__avatar {
     width: 40px;
@@ -64,6 +52,16 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    cursor: pointer;
+    border: 1px solid #ddd;
+    padding: 10px;
+    transition: all 0.2s;
+    height: max-content;
+    border-radius: 10px;
+
+    &:hover {
+      background-color: #f1eeee;
+    }
 
     @media (max-width: 768px) {
       flex-direction: column;
@@ -107,5 +105,12 @@
       margin-top: 5px;
       width: 100%;
     }
+  }
+}
+
+.favorite-button{
+  cursor: pointer;
+  &:hover{
+   opacity: 0.7;
   }
 }
